@@ -1,7 +1,6 @@
 package ru.practicum.event.service;
 
 import jakarta.servlet.http.HttpServletRequest;
-import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.ComponentScan;
 import org.springframework.data.domain.PageRequest;
@@ -9,7 +8,6 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 
-import ru.practicum.HitDto;
 import ru.practicum.StatsClient;
 import ru.practicum.StatsDto;
 import ru.practicum.additions.Constants;
@@ -26,7 +24,6 @@ import ru.practicum.exception.ValidationException;
 import java.net.URLDecoder;
 import java.nio.charset.StandardCharsets;
 import java.time.LocalDateTime;
-import java.time.format.DateTimeFormatter;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -36,6 +33,7 @@ import java.util.stream.Collectors;
 public class PublicEventServiceImpl implements PublicEventService {
     private final EventRepository eventRepository;
     private final StatsClient statsClient;
+    private final HitService hitService;
 
     @Override
     public List<EventShortDto> getEvents(String text, List<Long> categories, Boolean paid, String rangeStart,
@@ -69,7 +67,7 @@ public class PublicEventServiceImpl implements PublicEventService {
                     onlyAvailable, pageable);
         }
 
-        statsClient.createHit(createHitDto(request));
+        statsClient.createHit(hitService.createHitDto(request));
         return events.stream()
                 .map(EventMapper::toEventShortDto)
                 .collect(Collectors.toList());
@@ -84,29 +82,16 @@ public class PublicEventServiceImpl implements PublicEventService {
             throw new NotFoundException("Можно смотреть только опубликованные события");
         }
 
-        String start = event.getCreatedOn().withNano(0).format(DateTimeFormatter
-                .ofPattern(Constants.DATE_TIME_PATTERN));
-        String end = event.getEventDate().withNano(0).format(DateTimeFormatter
-                .ofPattern(Constants.DATE_TIME_PATTERN));
+        String start = event.getCreatedOn().withNano(0).format(Constants.DATE_TIME_FORMATTER);
+        String end = event.getEventDate().withNano(0).format(Constants.DATE_TIME_FORMATTER);
         List<StatsDto> viewStatsDtoList = statsClient.getStatsByDateAndUris(start, end,
                 List.of(request.getRequestURI()), true);
 
         if (!viewStatsDtoList.isEmpty()) {
-            event.setViews(viewStatsDtoList.get(0).getHits());
+            event.setViews(viewStatsDtoList.getFirst().getHits());
         }
-        statsClient.createHit(createHitDto(request));
+        statsClient.createHit(hitService.createHitDto(request));
         return EventMapper.toEventDto(event);
-    }
-
-    @Transactional
-    private HitDto createHitDto(HttpServletRequest request) {
-        return HitDto.builder()
-                .app("ewm-main-service")
-                .uri(request.getRequestURI())
-                .ip(request.getRemoteAddr())
-                .timestamp(LocalDateTime.now().withNano(0).format(DateTimeFormatter
-                        .ofPattern(Constants.DATE_TIME_PATTERN)))
-                .build();
     }
 }
 
